--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
-  "name": "n1-react-blog",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "randomstring": "^1.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.6.1",
-    "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1",
-    "sass": "^1.57.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "json-server": "^0.17.1",
-    "json-server-auth": "^2.1.0"
-  }
+    "name": "n1-react-blog",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "randomstring": "^1.2.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router": "^6.6.1",
+        "react-router-dom": "^6.6.1",
+        "react-scripts": "5.0.1",
+        "sass": "^1.57.1",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "dev": "concurrently \"npm start\" \"npm run server\"",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "server": "json-server -w server/server.json -p 3001 -m ./node_modules/json-server-auth"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "json-server": "^0.17.1",
+        "json-server-auth": "^2.1.0"
+    }
 }
